Clustering accuracy is now (correct - (incorrect + undetected)) / number expected clusters

--- a/experiments/clustering/clustering.ipynb
+++ b/experiments/clustering/clustering.ipynb
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -113,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -132,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -288,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -438,7 +438,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -507,7 +507,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -525,7 +525,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -576,7 +576,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -627,7 +627,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -642,6 +642,7 @@
     "    Returns:\n",
     "        None\n",
     "    \"\"\"\n",
+    "    sheet_num = 0\n",
     "    # Iterate over all images and their bounding boxes\n",
     "    for sheet, yolo_bbs in yolo_data.items():\n",
     "        #print(f\"Sheet: {sheet}\")\n",
@@ -660,7 +661,6 @@
     "            )\n",
     "\n",
     "        for method in [\"kmeans\", \"dbscan\", \"agglomerative\"]:\n",
-    "            sheet_num = 0\n",
     "            # Now we need to cluster the bounding boxes that pertain to the same multi-digit number\n",
     "            if method == \"kmeans\":\n",
     "                time_labels = cluster_kmeans(time_bounding_boxes, [40, 41, 42])\n",
@@ -775,7 +775,7 @@
     "                    f,\n",
     "                )\n",
     "\n",
-    "            sheet_num += 1"
+    "        sheet_num += 1"
    ]
   },
   {
@@ -789,7 +789,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -899,7 +899,7 @@
     "            for cluster, value in time_clusters.items():\n",
     "                if value['label'] not in expected_time_values:\n",
     "                    # Print the sheet, value that is not in the expected values\n",
-    "                    # print(f\"Time -> Sheet: {sheet}, Value: {value}\")\n",
+    "                    #print(f\"Time -> Sheet: {sheet}, Value: {value[\"label\"]}.\")\n",
     "                    # We have an erroneous cluster\n",
     "                    time_wrong_clusters_count += 1\n",
     "                    time_distance_values_erroneous.append(value['distance'])\n",
@@ -933,11 +933,11 @@
     "            undetected_number_clusters += expected_number_values\n",
     "\n",
     "        print(\n",
-    "            f\"Time labels: {time_correct_clusters_count} correct clusters, {time_wrong_clusters_count} incorrect clusters. There were {len(undetected_time_clusters)} undetected clusters. The accuracy is {(time_correct_clusters_count) / (42 * 19) * 100:.2f}%.\\nAverage distance when correct: {sum(time_distance_values) / len(time_distance_values):.2f}px, incorrect: {sum(time_distance_values_erroneous) / 1 if len(time_distance_values_erroneous) == 0 else len(time_distance_values_erroneous):.2f}px, and overall: {sum(time_distance_values + time_distance_values_erroneous) / (len(time_distance_values) + len(time_distance_values_erroneous)):.2f}px\"\n",
+    "            f\"Time labels: {time_correct_clusters_count} correct clusters, {time_wrong_clusters_count} incorrect clusters. There were {len(undetected_time_clusters)} undetected clusters. The accuracy is {(time_correct_clusters_count - (time_wrong_clusters_count + len(undetected_time_clusters))) / (42 * 19) * 100:.2f}%.\\nAverage distance when correct: {sum(time_distance_values) / len(time_distance_values):.2f}px, incorrect: {sum(time_distance_values_erroneous) / 1 if len(time_distance_values_erroneous) == 0 else len(time_distance_values_erroneous):.2f}px, and overall: {sum(time_distance_values + time_distance_values_erroneous) / (len(time_distance_values) + len(time_distance_values_erroneous)):.2f}px\"\n",
     "        )\n",
     "        print(\"\\n\")\n",
     "        print(\n",
-    "            f\"Number labels: {number_correct_clusters_count} correct clusters, {number_wrong_clusters_count} incorrect clusters. There were {len(undetected_number_clusters)} undetected clusters. The accuracy is {(number_correct_clusters_count) / (20 * 19) * 100:.2f}%.\\nAverage distance when correct: {sum(number_distance_values) / len(number_distance_values):.2f}px, incorrect: {sum(number_distance_values_erroneous) / 1 if len(number_distance_values_erroneous) == 0 else len(number_distance_values_erroneous):.2f}px, and overall: {sum(number_distance_values + number_distance_values_erroneous) / (len(number_distance_values) + len(number_distance_values_erroneous)):.2f}px\"\n",
+    "            f\"Number labels: {number_correct_clusters_count} correct clusters, {number_wrong_clusters_count} incorrect clusters. There were {len(undetected_number_clusters)} undetected clusters. The accuracy is {(number_correct_clusters_count - (number_wrong_clusters_count + len(undetected_number_clusters))) / (20 * 19) * 100:.2f}%.\\nAverage distance when correct: {sum(number_distance_values) / len(number_distance_values):.2f}px, incorrect: {sum(number_distance_values_erroneous) / 1 if len(number_distance_values_erroneous) == 0 else len(number_distance_values_erroneous):.2f}px, and overall: {sum(number_distance_values + number_distance_values_erroneous) / (len(number_distance_values) + len(number_distance_values_erroneous)):.2f}px\"\n",
     "        )\n",
     "        print(\"\\n\\n\")\n"
    ]
@@ -951,7 +951,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -959,32 +959,32 @@
      "output_type": "stream",
      "text": [
       "Method: kmeans\n",
-      "Time labels: 778 correct clusters, 19 incorrect clusters. There were 20 undetected clusters. The accuracy is 97.49%.\n",
-      "Average distance when correct: 4.81px, incorrect: 3.94px, and overall: 4.79px\n",
+      "Time labels: 796 correct clusters, 1 incorrect clusters. There were 2 undetected clusters. The accuracy is 99.37%.\n",
+      "Average distance when correct: 4.83px, incorrect: 1.00px, and overall: 4.83px\n",
       "\n",
       "\n",
-      "Number labels: 380 correct clusters, 0 incorrect clusters. There were 0 undetected clusters. The accuracy is 100.00%.\n",
-      "Average distance when correct: 6.60px, incorrect: 0.00px, and overall: 6.60px\n",
+      "Number labels: 379 correct clusters, 1 incorrect clusters. There were 1 undetected clusters. The accuracy is 99.21%.\n",
+      "Average distance when correct: 6.16px, incorrect: 1.00px, and overall: 6.16px\n",
       "\n",
       "\n",
       "\n",
       "Method: dbscan\n",
-      "Time labels: 778 correct clusters, 19 incorrect clusters. There were 20 undetected clusters. The accuracy is 97.49%.\n",
-      "Average distance when correct: 4.81px, incorrect: 3.94px, and overall: 4.79px\n",
+      "Time labels: 796 correct clusters, 1 incorrect clusters. There were 2 undetected clusters. The accuracy is 99.37%.\n",
+      "Average distance when correct: 4.83px, incorrect: 1.00px, and overall: 4.83px\n",
       "\n",
       "\n",
-      "Number labels: 380 correct clusters, 0 incorrect clusters. There were 0 undetected clusters. The accuracy is 100.00%.\n",
-      "Average distance when correct: 6.60px, incorrect: 0.00px, and overall: 6.60px\n",
+      "Number labels: 379 correct clusters, 1 incorrect clusters. There were 1 undetected clusters. The accuracy is 99.21%.\n",
+      "Average distance when correct: 6.16px, incorrect: 1.00px, and overall: 6.16px\n",
       "\n",
       "\n",
       "\n",
       "Method: agglomerative\n",
-      "Time labels: 778 correct clusters, 19 incorrect clusters. There were 20 undetected clusters. The accuracy is 97.49%.\n",
-      "Average distance when correct: 4.81px, incorrect: 3.94px, and overall: 4.79px\n",
+      "Time labels: 796 correct clusters, 1 incorrect clusters. There were 2 undetected clusters. The accuracy is 99.37%.\n",
+      "Average distance when correct: 4.83px, incorrect: 1.00px, and overall: 4.83px\n",
       "\n",
       "\n",
-      "Number labels: 380 correct clusters, 0 incorrect clusters. There were 0 undetected clusters. The accuracy is 100.00%.\n",
-      "Average distance when correct: 6.60px, incorrect: 0.00px, and overall: 6.60px\n",
+      "Number labels: 379 correct clusters, 1 incorrect clusters. There were 1 undetected clusters. The accuracy is 99.21%.\n",
+      "Average distance when correct: 6.16px, incorrect: 1.00px, and overall: 6.16px\n",
       "\n",
       "\n",
       "\n"
@@ -1006,7 +1006,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -1014,32 +1014,32 @@
      "output_type": "stream",
      "text": [
       "Method: kmeans\n",
-      "Time labels: 759 correct clusters, 21 incorrect clusters. There were 39 undetected clusters. The accuracy is 95.11%.\n",
-      "Average distance when correct: 4.87px, incorrect: 4.52px, and overall: 4.86px\n",
+      "Time labels: 765 correct clusters, 8 incorrect clusters. There were 33 undetected clusters. The accuracy is 90.73%.\n",
+      "Average distance when correct: 4.91px, incorrect: 8.00px, and overall: 4.93px\n",
       "\n",
       "\n",
-      "Number labels: 374 correct clusters, 2 incorrect clusters. There were 6 undetected clusters. The accuracy is 98.42%.\n",
-      "Average distance when correct: 6.68px, incorrect: 2.00px, and overall: 6.68px\n",
+      "Number labels: 376 correct clusters, 2 incorrect clusters. There were 4 undetected clusters. The accuracy is 97.37%.\n",
+      "Average distance when correct: 6.15px, incorrect: 2.00px, and overall: 6.15px\n",
       "\n",
       "\n",
       "\n",
       "Method: dbscan\n",
-      "Time labels: 770 correct clusters, 55 incorrect clusters. There were 28 undetected clusters. The accuracy is 96.49%.\n",
-      "Average distance when correct: 4.81px, incorrect: 6.55px, and overall: 4.92px\n",
+      "Time labels: 782 correct clusters, 37 incorrect clusters. There were 16 undetected clusters. The accuracy is 91.35%.\n",
+      "Average distance when correct: 4.87px, incorrect: 37.00px, and overall: 5.02px\n",
       "\n",
       "\n",
-      "Number labels: 347 correct clusters, 14 incorrect clusters. There were 33 undetected clusters. The accuracy is 91.32%.\n",
-      "Average distance when correct: 6.65px, incorrect: 14.00px, and overall: 6.65px\n",
+      "Number labels: 351 correct clusters, 14 incorrect clusters. There were 29 undetected clusters. The accuracy is 81.05%.\n",
+      "Average distance when correct: 6.18px, incorrect: 14.00px, and overall: 6.15px\n",
       "\n",
       "\n",
       "\n",
       "Method: agglomerative\n",
-      "Time labels: 763 correct clusters, 24 incorrect clusters. There were 35 undetected clusters. The accuracy is 95.61%.\n",
-      "Average distance when correct: 4.86px, incorrect: 5.14px, and overall: 4.87px\n",
+      "Time labels: 778 correct clusters, 10 incorrect clusters. There were 20 undetected clusters. The accuracy is 93.73%.\n",
+      "Average distance when correct: 4.90px, incorrect: 10.00px, and overall: 4.94px\n",
       "\n",
       "\n",
-      "Number labels: 364 correct clusters, 11 incorrect clusters. There were 16 undetected clusters. The accuracy is 95.79%.\n",
-      "Average distance when correct: 6.72px, incorrect: 11.00px, and overall: 6.68px\n",
+      "Number labels: 361 correct clusters, 14 incorrect clusters. There were 19 undetected clusters. The accuracy is 86.32%.\n",
+      "Average distance when correct: 6.23px, incorrect: 14.00px, and overall: 6.19px\n",
       "\n",
       "\n",
       "\n"
