Re-ran whole notebook

--- a/experiments/clustering/clustering.ipynb
+++ b/experiments/clustering/clustering.ipynb
@@ -789,7 +789,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -920,7 +920,7 @@
     "            # Keep track of any false positives (new clusters that don't exist) or negatives (missing clusters)\n",
     "            for cluster, value in number_clusters.items():\n",
     "                if value['label'] not in expected_number_values:\n",
-    "                    # print(f\"Time -> Sheet: {sheet}, Value: {value}\")\n",
+    "                    #print(f\"Number -> Sheet: {sheet}, Value: {value}\")\n",
     "                    # We have an erroneous cluster\n",
     "                    number_wrong_clusters_count += 1\n",
     "                    number_distance_values_erroneous.append(value['distance'])\n",
@@ -951,7 +951,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -959,6 +959,7 @@
      "output_type": "stream",
      "text": [
       "Method: kmeans\n",
+      "Time -> Sheet: RC_0011_intraoperative.JPG, Value: {'label': '90_mmhg', 'distance': 4.809698530392025}\n",
       "Time labels: 796 correct clusters, 1 incorrect clusters. There were 2 undetected clusters. The accuracy is 99.37%.\n",
       "Average distance when correct: 4.83px, incorrect: 1.00px, and overall: 4.83px\n",
       "\n",
@@ -969,6 +970,7 @@
       "\n",
       "\n",
       "Method: dbscan\n",
+      "Time -> Sheet: RC_0011_intraoperative.JPG, Value: {'label': '90_mmhg', 'distance': 4.809698530392025}\n",
       "Time labels: 796 correct clusters, 1 incorrect clusters. There were 2 undetected clusters. The accuracy is 99.37%.\n",
       "Average distance when correct: 4.83px, incorrect: 1.00px, and overall: 4.83px\n",
       "\n",
@@ -979,6 +981,7 @@
       "\n",
       "\n",
       "Method: agglomerative\n",
+      "Time -> Sheet: RC_0011_intraoperative.JPG, Value: {'label': '90_mmhg', 'distance': 4.809698530392025}\n",
       "Time labels: 796 correct clusters, 1 incorrect clusters. There were 2 undetected clusters. The accuracy is 99.37%.\n",
       "Average distance when correct: 4.83px, incorrect: 1.00px, and overall: 4.83px\n",
       "\n",
@@ -1006,7 +1009,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -1014,32 +1017,59 @@
      "output_type": "stream",
      "text": [
       "Method: kmeans\n",
-      "Time labels: 765 correct clusters, 8 incorrect clusters. There were 33 undetected clusters. The accuracy is 90.73%.\n",
-      "Average distance when correct: 4.91px, incorrect: 8.00px, and overall: 4.93px\n",
+      "Time -> Sheet: RC_0006_intraoperative.JPG, Value: {'label': '40_mmhg', 'distance': 5.183788043583087}\n",
+      "Time -> Sheet: RC_0011_intraoperative.JPG, Value: {'label': '90_mmhg', 'distance': 6.1316966112142905}\n",
+      "Time labels: 771 correct clusters, 9 incorrect clusters. There were 27 undetected clusters. The accuracy is 92.11%.\n",
+      "Average distance when correct: 4.90px, incorrect: 9.00px, and overall: 4.92px\n",
       "\n",
       "\n",
-      "Number labels: 376 correct clusters, 2 incorrect clusters. There were 4 undetected clusters. The accuracy is 97.37%.\n",
-      "Average distance when correct: 6.15px, incorrect: 2.00px, and overall: 6.15px\n",
+      "Number labels: 375 correct clusters, 2 incorrect clusters. There were 5 undetected clusters. The accuracy is 96.84%.\n",
+      "Average distance when correct: 6.10px, incorrect: 2.00px, and overall: 6.10px\n",
       "\n",
       "\n",
       "\n",
       "Method: dbscan\n",
-      "Time labels: 782 correct clusters, 37 incorrect clusters. There were 16 undetected clusters. The accuracy is 91.35%.\n",
-      "Average distance when correct: 4.87px, incorrect: 37.00px, and overall: 5.02px\n",
+      "Time -> Sheet: RC_0001_intraoperative.JPG, Value: {'label': '130_mmhg', 'distance': 5.180344603918557}\n",
+      "Time -> Sheet: RC_0002_intraoperative.JPG, Value: {'label': '140_mmhg', 'distance': 6.007774871034995}\n",
+      "Time -> Sheet: RC_0005_intraoperative.JPG, Value: {'label': '90_mmhg', 'distance': 5.154766705109225}\n",
+      "Time -> Sheet: RC_0006_intraoperative.JPG, Value: {'label': '40_mmhg', 'distance': 5.183788043583087}\n",
+      "Time -> Sheet: RC_0006_intraoperative.JPG, Value: {'label': '140_mmhg', 'distance': 5.066812625083303}\n",
+      "Time -> Sheet: RC_0007_intraoperative.JPG, Value: {'label': '160_mmhg', 'distance': 5.994486889373393}\n",
+      "Time -> Sheet: RC_0008_intraoperative.JPG, Value: {'label': '170_mmhg', 'distance': 6.795881051183203}\n",
+      "Time -> Sheet: RC_0009_intraoperative.JPG, Value: {'label': '100_mmhg', 'distance': 4.7953322880555165}\n",
+      "Time -> Sheet: RC_0010_intraoperative.JPG, Value: {'label': '160_mmhg', 'distance': 5.102439879048022}\n",
+      "Time -> Sheet: RC_0011_intraoperative.JPG, Value: {'label': '110_mmhg', 'distance': 3.062043241211753}\n",
+      "Time -> Sheet: RC_0013_intraoperative.JPG, Value: {'label': '130_mmhg', 'distance': 6.666556359082255}\n",
+      "Time -> Sheet: RC_0016_intraoperative.JPG, Value: {'label': '110_mmhg', 'distance': 6.683502203641104}\n",
+      "Time -> Sheet: RC_0017_intraoperative.JPG, Value: {'label': '60_mmhg', 'distance': 8.268570745370752}\n",
+      "Time -> Sheet: RC_0018_intraoperative.JPG, Value: {'label': '130_mmhg', 'distance': 6.844576419938307}\n",
+      "Time labels: 784 correct clusters, 34 incorrect clusters. There were 14 undetected clusters. The accuracy is 92.23%.\n",
+      "Average distance when correct: 4.84px, incorrect: 34.00px, and overall: 4.98px\n",
       "\n",
       "\n",
-      "Number labels: 351 correct clusters, 14 incorrect clusters. There were 29 undetected clusters. The accuracy is 81.05%.\n",
-      "Average distance when correct: 6.18px, incorrect: 14.00px, and overall: 6.15px\n",
+      "Number labels: 354 correct clusters, 14 incorrect clusters. There were 26 undetected clusters. The accuracy is 82.63%.\n",
+      "Average distance when correct: 6.12px, incorrect: 14.00px, and overall: 6.11px\n",
       "\n",
       "\n",
       "\n",
       "Method: agglomerative\n",
-      "Time labels: 778 correct clusters, 10 incorrect clusters. There were 20 undetected clusters. The accuracy is 93.73%.\n",
-      "Average distance when correct: 4.90px, incorrect: 10.00px, and overall: 4.94px\n",
+      "Time -> Sheet: RC_0002_intraoperative.JPG, Value: {'label': '200_mmhg', 'distance': 3.354495506784342}\n",
+      "Time -> Sheet: RC_0007_intraoperative.JPG, Value: {'label': '120_mmhg', 'distance': 3.318892100399529}\n",
+      "Time -> Sheet: RC_0007_intraoperative.JPG, Value: {'label': '210_mmhg', 'distance': 3.3901530203134507}\n",
+      "Time -> Sheet: RC_0008_intraoperative.JPG, Value: {'label': '160_mmhg', 'distance': 3.76910779112449}\n",
+      "Time -> Sheet: RC_0008_intraoperative.JPG, Value: {'label': '190_mmhg', 'distance': 3.7830823077202314}\n",
+      "Time -> Sheet: RC_0009_intraoperative.JPG, Value: {'label': '110_mmhg', 'distance': 3.764961287135599}\n",
+      "Time -> Sheet: RC_0010_intraoperative.JPG, Value: {'label': '210_mmhg', 'distance': 3.2372488004611957}\n",
+      "Time -> Sheet: RC_0011_intraoperative.JPG, Value: {'label': '90_mmhg', 'distance': 6.1316966112142905}\n",
+      "Time -> Sheet: RC_0013_intraoperative.JPG, Value: {'label': '90_mmhg', 'distance': 10.697378890833223}\n",
+      "Time -> Sheet: RC_0018_intraoperative.JPG, Value: {'label': '160_mmhg', 'distance': 3.5671566928598124}\n",
+      "Time -> Sheet: RC_0019_intraoperative.JPG, Value: {'label': '140_mmhg', 'distance': 3.4219013467424286}\n",
+      "Time labels: 774 correct clusters, 11 incorrect clusters. There were 24 undetected clusters. The accuracy is 92.61%.\n",
+      "Average distance when correct: 4.89px, incorrect: 11.00px, and overall: 4.93px\n",
       "\n",
       "\n",
-      "Number labels: 361 correct clusters, 14 incorrect clusters. There were 19 undetected clusters. The accuracy is 86.32%.\n",
-      "Average distance when correct: 6.23px, incorrect: 14.00px, and overall: 6.19px\n",
+      "Number labels: 365 correct clusters, 11 incorrect clusters. There were 15 undetected clusters. The accuracy is 89.21%.\n",
+      "Average distance when correct: 6.14px, incorrect: 11.00px, and overall: 6.09px\n",
       "\n",
       "\n",
       "\n"
