--- a/experiments/clustering/clustering.ipynb
+++ b/experiments/clustering/clustering.ipynb
@@ -203,6 +203,11 @@
     "        )\n",
     "    )\n",
     "\n",
+    "    # TODO: Perform the single axis filtering first, then filter the adjacent axis by removing outliers\n",
+    "    # ? Possibilities of removing outliers based off of distance vs. location\n",
+    "    # ? Distance will result in the possibility of boxes being included if there are two together\n",
+    "    # ? location will result in the possibility of tihe boxes being included if there are close\n",
+    "\n",
     "    # find the point with the maximum density of bounding boxes\n",
     "    bboxes_right: List[int] = [bb.right for bb in bboxes]\n",
     "    # x_loc is the vertical line to the left of the time axis and right of the numbers axis\n",
