Add remove outliers to preprocessing

--- a/experiments/clustering/clustering.ipynb
+++ b/experiments/clustering/clustering.ipynb
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -113,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -132,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -156,6 +156,45 @@
     "\n",
     "    max_index = np.argmax(kde_vals)\n",
     "    return x_values[max_index]\n",
+    "\n",
+    "def remove_bb_outliers(boxes: List[BoundingBox]) -> List[BoundingBox]:\n",
+    "    \"\"\"\n",
+    "    Given a list of bounding boxes, remove the outliers from the x axis, then remove the outliers from the y axis\n",
+    "\n",
+    "    Args:\n",
+    "        boxes: List of Bounding Boxes to filter\n",
+    "\n",
+    "    Returns:\n",
+    "        Filtered list of Bounding Boxes\n",
+    "    \"\"\"\n",
+    "    x_vals = [bb.left for bb in boxes]\n",
+    "    # find the 25th percentile\n",
+    "    x_Q1 = np.percentile(x_vals, 25)\n",
+    "    # find the 75th percentile\n",
+    "    x_Q3 = np.percentile(x_vals, 75)\n",
+    "    # find the IQR\n",
+    "    x_IQR = x_Q3 - x_Q1\n",
+    "    # determine lower and upper bounds\n",
+    "    x_lower = x_Q1 - 1.5*x_IQR\n",
+    "    x_upper = x_Q3 + 1.5*x_IQR\n",
+    "    # remove outliers via the x axis\n",
+    "    x_filtered = [bb for bb in boxes if x_lower <= bb.left <= x_upper]\n",
+    "\n",
+    "    y_vals = [bb.top for bb in x_filtered]\n",
+    "    # find the 25th percentile\n",
+    "    y_Q1 = np.percentile(y_vals, 25)\n",
+    "    # find the 75th percentile\n",
+    "    y_Q3 = np.percentile(y_vals, 75)\n",
+    "    # find the IQR\n",
+    "    y_IQR = y_Q3 - y_Q1\n",
+    "    # determine the lower and upper bounds\n",
+    "    y_lower = y_Q1 - 1.5*y_IQR\n",
+    "    y_upper = y_Q3 + 1.5*y_IQR\n",
+    "    # remove outliers via the y axis\n",
+    "    filtered = [bb for bb in x_filtered if y_lower <= bb.top <= y_upper]\n",
+    "\n",
+    "    return x_filtered\n",
+    "\n",
     "\n",
     "\n",
     "def select_relevant_bounding_boxes(\n",
@@ -203,11 +242,6 @@
     "        )\n",
     "    )\n",
     "\n",
-    "    # TODO: Perform the single axis filtering first, then filter the adjacent axis by removing outliers\n",
-    "    # ? Possibilities of removing outliers based off of distance vs. location\n",
-    "    # ? Distance will result in the possibility of boxes being included if there are two together\n",
-    "    # ? location will result in the possibility of tihe boxes being included if there are close\n",
-    "\n",
     "    # find the point with the maximum density of bounding boxes\n",
     "    bboxes_right: List[int] = [bb.right for bb in bboxes]\n",
     "    # x_loc is the vertical line to the left of the time axis and right of the numbers axis\n",
@@ -217,56 +251,55 @@
     "    # y_loc is the horizontal line undert the time axis and above the number axis\n",
     "    y_loc: int = find_density_max(bboxes_bottom, desired_img_height)\n",
     "\n",
-    "    # x_loc_right is the vertical line at the end of the time axis\n",
-    "    x_loc_right: int = x_loc + 610\n",
-    "    # y_loc_bottom is the horizontal line at the bottom of the number axis\n",
-    "    y_loc_bottom: int = y_loc + 185\n",
     "\n",
     "    bounding_boxes_time = []\n",
     "    bounding_boxes_numbers = []\n",
     "\n",
     "    # Process the bounding boxes\n",
     "    for bounding_box in bboxes:\n",
-    "        # get the pixels for plotting\n",
-    "        x_min = int(bounding_box.left)\n",
-    "        x_max = int(bounding_box.right)\n",
-    "        y_min = int(bounding_box.top)\n",
-    "        y_max = int(bounding_box.bottom)\n",
-    "        \n",
     "        # get the center point of the bounding box for comparison\n",
     "        x_center_bb, y_center_bb = bounding_box.center\n",
     "\n",
     "        # check if the bounding box is a number on the BP chart by comparing to the KDE index + a threshold\n",
-    "        if ((x_center_bb > x_loc-15 and x_center_bb < x_loc+2) and (y_center_bb > y_loc-2 and y_center_bb < y_loc_bottom+2)):\n",
-    "            # Bounding box is in the top-right region\n",
-    "            cv2.rectangle(\n",
-    "                resized_image, (x_min, y_min), (x_max, y_max), (255, 255, 0), 1\n",
-    "            )\n",
+    "        if (x_center_bb > x_loc-15 and x_center_bb < x_loc+2):\n",
     "            bounding_boxes_numbers.append(bounding_box)\n",
     "        # check if the bounding box is a time on the BP chart by comparing to the KDE index + a threshold\n",
-    "        elif ((y_center_bb > y_loc-10 and y_max < y_loc+2) and (x_center_bb > x_loc-2 and x_center_bb < x_loc_right+2)):\n",
-    "            cv2.rectangle(\n",
-    "                resized_image, (x_min, y_min), (x_max, y_max), (255, 0, 255), 1\n",
-    "            )\n",
+    "        elif (y_center_bb > y_loc-10 and y_center_bb < y_loc+2):\n",
     "            bounding_boxes_time.append(bounding_box)\n",
+    "    \n",
+    "    bounding_boxes_numbers = remove_bb_outliers(bounding_boxes_numbers)\n",
+    "    bounding_boxes_time = remove_bb_outliers(bounding_boxes_time)\n",
+    "\n",
+    "    for bounding_box in bounding_boxes_numbers:\n",
+    "        x_min = int(bounding_box.left)\n",
+    "        x_max = int(bounding_box.right)\n",
+    "        y_min = int(bounding_box.top)\n",
+    "        y_max = int(bounding_box.bottom)\n",
+    "\n",
+    "        # Bounding box is in the top-right region\n",
+    "        cv2.rectangle(\n",
+    "            resized_image, (x_min, y_min), (x_max, y_max), (255, 255, 0), 1\n",
+    "        )\n",
+    "    \n",
+    "    for bounding_box in bounding_boxes_time:\n",
+    "        x_min = int(bounding_box.left)\n",
+    "        x_max = int(bounding_box.right)\n",
+    "        y_min = int(bounding_box.top)\n",
+    "        y_max = int(bounding_box.bottom)\n",
+    "\n",
+    "        cv2.rectangle(\n",
+    "            resized_image, (x_min, y_min), (x_max, y_max), (255, 0, 255), 1\n",
+    "        )\n",
     "            \n",
     "    # plot the lines of the KDE index found for debugging\n",
-    "    numbers_start = (int(x_loc), 0)\n",
-    "    numbers_end = (int(x_loc), desired_img_height)\n",
+    "    # numbers_start = (int(x_loc), 0)\n",
+    "    # numbers_end = (int(x_loc), desired_img_height)\n",
     "\n",
-    "    numbers2_start = (int(x_loc_right), 0)\n",
-    "    numbers2_end = (int(x_loc_right), desired_img_height)\n",
+    "    # time_start = (0, int(y_loc))\n",
+    "    # time_end = (desired_img_width, int(y_loc))\n",
     "\n",
-    "    time_start = (0, int(y_loc))\n",
-    "    time_end = (desired_img_width, int(y_loc))\n",
-    "\n",
-    "    time2_start = (0, int(y_loc_bottom))\n",
-    "    time2_end = (desired_img_width, int(y_loc_bottom))\n",
-    "\n",
-    "    cv2.line(resized_image, numbers_start, numbers_end, (255,255,0), 1)\n",
-    "    cv2.line(resized_image, numbers2_start, numbers2_end, (255,255,0), 1)\n",
-    "    cv2.line(resized_image, time_start, time_end, (255,0,255), 1)\n",
-    "    cv2.line(resized_image, time2_start, time2_end, (255,0,255), 1)\n",
+    "    # cv2.line(resized_image, numbers_start, numbers_end, (255,255,0), 1)\n",
+    "    # cv2.line(resized_image, time_start, time_end, (255,0,255), 1)\n",
     "\n",
     "    # Close all OpenCV windows, always do this or it will annoyingly not go away\n",
     "    # You can also manually quit out with ESC key.\n",
@@ -293,7 +326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -443,7 +476,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -512,7 +545,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -530,7 +563,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -581,7 +614,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -632,7 +665,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -794,7 +827,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -956,7 +989,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -1011,7 +1044,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -1019,32 +1052,32 @@
      "output_type": "stream",
      "text": [
       "Method: kmeans\n",
-      "Time labels: 771 correct clusters, 4 incorrect clusters. There were 27 undetected clusters. The accuracy is 92.73%.\n",
-      "Average distance when correct: 4.90px, incorrect: 4.00px, and overall: 4.91px\n",
+      "Time labels: 771 correct clusters, 5 incorrect clusters. There were 27 undetected clusters. The accuracy is 92.61%.\n",
+      "Average distance when correct: 4.92px, incorrect: 5.00px, and overall: 4.92px\n",
       "\n",
       "\n",
-      "Number labels: 371 correct clusters, 3 incorrect clusters. There were 9 undetected clusters. The accuracy is 94.47%.\n",
-      "Average distance when correct: 6.11px, incorrect: 3.00px, and overall: 6.10px\n",
+      "Number labels: 366 correct clusters, 8 incorrect clusters. There were 14 undetected clusters. The accuracy is 90.53%.\n",
+      "Average distance when correct: 6.19px, incorrect: 8.00px, and overall: 6.19px\n",
       "\n",
       "\n",
       "\n",
       "Method: dbscan\n",
-      "Time labels: 786 correct clusters, 33 incorrect clusters. There were 12 undetected clusters. The accuracy is 92.86%.\n",
-      "Average distance when correct: 4.83px, incorrect: 33.00px, and overall: 4.98px\n",
+      "Time labels: 780 correct clusters, 38 incorrect clusters. There were 18 undetected clusters. The accuracy is 90.73%.\n",
+      "Average distance when correct: 4.87px, incorrect: 38.00px, and overall: 5.00px\n",
       "\n",
       "\n",
-      "Number labels: 347 correct clusters, 11 incorrect clusters. There were 33 undetected clusters. The accuracy is 79.74%.\n",
-      "Average distance when correct: 6.12px, incorrect: 11.00px, and overall: 6.11px\n",
+      "Number labels: 350 correct clusters, 14 incorrect clusters. There were 30 undetected clusters. The accuracy is 80.53%.\n",
+      "Average distance when correct: 6.17px, incorrect: 14.00px, and overall: 6.18px\n",
       "\n",
       "\n",
       "\n",
       "Method: agglomerative\n",
-      "Time labels: 781 correct clusters, 7 incorrect clusters. There were 17 undetected clusters. The accuracy is 94.86%.\n",
-      "Average distance when correct: 4.89px, incorrect: 7.00px, and overall: 4.92px\n",
+      "Time labels: 774 correct clusters, 10 incorrect clusters. There were 24 undetected clusters. The accuracy is 92.73%.\n",
+      "Average distance when correct: 4.91px, incorrect: 10.00px, and overall: 4.94px\n",
       "\n",
       "\n",
-      "Number labels: 354 correct clusters, 17 incorrect clusters. There were 26 undetected clusters. The accuracy is 81.84%.\n",
-      "Average distance when correct: 6.19px, incorrect: 17.00px, and overall: 6.16px\n",
+      "Number labels: 364 correct clusters, 9 incorrect clusters. There were 16 undetected clusters. The accuracy is 89.21%.\n",
+      "Average distance when correct: 6.22px, incorrect: 9.00px, and overall: 6.19px\n",
       "\n",
       "\n",
       "\n"
@@ -1067,7 +1100,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "ChartExtractor",
    "language": "python",
    "name": "python3"
   },
